--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "game"
   ],
   "dependencies": {
+    "bowser": "^1.6.1",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.5.3",
-    "react-draggable": "^2.2.3",
+    "react-dnd": "^2.3.0",
+    "react-dnd-html5-backend": "^2.3.0",
+    "react-dnd-touch-backend": "^0.3.6",
     "react-redux": "^5.0.3",
+    "react-reorder": "^2.0.0",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.0"
   },
   "devDependencies": {
     "@types/history": "^4.5.0",
