--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/history": "^4.5.0",
     "@types/ramda": "0.0.2",
     "@types/react": "^15.0.11",
+    "@types/react-dnd": "^2.0.32",
     "@types/react-dom": "^0.14.20",
     "@types/react-redux": "^4.4.36",
     "babel-core": "^6.14.0",
@@ -46,7 +47,7 @@
     "style-loader": "^0.16.1",
     "ts-loader": "^2.0.3",
     "ts-node": "^2.1.0",
-    "typescript": "^2.1.5",
+    "typescript": "^2.2.2",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.4.2"
