--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bowser": "^1.6.1",
     "isomorphic-fetch": "^2.2.1",
+    "ramda": "^0.23.0",
     "react": "^15.5.3",
     "react-dnd": "^2.3.0",
     "react-dnd-html5-backend": "^2.3.0",
@@ -37,8 +38,10 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.13.0",
+    "chai": "^3.5.0",
     "css-loader": "^0.28.0",
     "file-loader": "^0.11.1",
+    "mocha": "^3.2.0",
     "node-sass": "^4.5.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
