--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack-dev-server --host 0.0.0.0 --port 1234 --progress --colors --history-api-fallback --config webpack.config.development.babel.js",
     "test": "mocha --compilers ts:ts-node/register --recursive test/unit",
     "clean": "rm -rf build",
-    "build": "npm run clean; webpack --config webpack.config.production.babel.js; cp index.html build",
+    "build": "npm run clean; webpack --config webpack.config.production.babel.js; cp index.html build; cp -r static/* build/static",
     "publish": "git subtree push --prefix build origin gh-pages"
   },
   "keywords": [
