--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "isomorphic-fetch": "^2.2.1",
     "ramda": "^0.23.0",
     "react": "^15.5.3",
+    "react-burger-menu": "^2.0.0",
     "react-dnd": "^2.3.0",
     "react-dnd-html5-backend": "^2.3.0",
     "react-dnd-touch-backend": "^0.3.6",
