--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "react-dnd-html5-backend": "^2.3.0",
     "react-dnd-touch-backend": "^0.3.6",
     "react-redux": "^5.0.3",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-treeview": "^0.4.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.0"
