--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bowser": "^1.6.1",
     "isomorphic-fetch": "^2.2.1",
+    "material-ui": "^0.17.4",
     "ramda": "^0.23.0",
     "react": "^15.5.3",
     "react-burger-menu": "^2.0.0",
@@ -28,6 +29,7 @@
     "react-redux": "^5.0.3",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1",
     "react-treeview": "^0.4.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
