--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "style-loader": "^0.16.1",
     "ts-loader": "^2.0.3",
     "ts-node": "^2.1.0",
+    "tslint": "^5.1.0",
     "typescript": "^2.2.2",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.0",
